# Rewriting_Homework

./: CMakeLists.txt  LICENSE  README.md  bubble_sort.py
.github/workflows/: main.yml  ruff.yml  tests.yml
github/workflows/: main.yml
python/: Hello World.py  dfs.py  do_eratosthenes.py
python/Heap_sort/: main.py
src/carrying/: main.py  tests.py
src/dfs/: main.py  tests.py
src/python/: Heap_sort.py  carrying.py  coin_exchange.py  extended_euclud.py  haffman_code.py
src/python/queen/: complexity.md  fastest.py
src/queen/: complexity.md  enumeration.py  fastest.py  recursion.py
src/sorting_list/: main.c  tests.c
src/works_on_C/: Lucky tickets.c  array_flip.c  fast_count.c  find_string.c
src/works_on_C/more_difficult/: advanced_bracket-2.c  advanced_bracket.c  binary_represent.c  double.c  sorting_list.c  sorting_station.c
src/works_on_C/more_difficult/optimal_sorting/: instruction.txt  main.c  sort.s
works_on_C/: check_string.c  count_zero.c  incomplete_quotient.c
works_on_C/more_difficult/: counting_rhyme.c
works_on_C/more_difficult/optimal_sorting/: assembler.s  instruction.txt  main.c
